lab/taks1/deployment-jenkins.yaml
apiVersion: extensions/v1beta1 # for versions before 1.7.0 use apps/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        # env:
        # - name: ADMIN_PASSWORD
        #   valueFrom:
        #     secretKeyRef: 
        #       name: jenkins-admin-pass
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /login
            port: 8080
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /login
            port: 8080
        ports:
        - containerPort: 8080
        
        volumeMounts:        
        - name: shared-data
          mountPath: /var/jenkins_plugins
        - name: jk-home  
          mountPath: /var/jenkins_home
        - name: shared-pass
          mountPath: /var/jenkins_home/secrets          

      volumes:
        - name: plugins
          configMap:
            name: jenkins-plugins
        - name: shared-data
          emptyDir: {}
        - name: shared-pass
          emptyDir: {}
        - name: jk-home
          persistentVolumeClaim:
            claimName: pvc-data
